@@ -21,4 +21,4 @@ Bug fixes
  * Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
  * Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
  * Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
- 
+ * Image listing in the image chooser no longer becomes unpaginated after an invalid upload form submission (Stephen Rice)
